--- a/angular/merge/views/main/list.html
+++ b/angular/merge/views/main/list.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>List Page</h1>
-	<a href='/insert'>Insert Data</a>
+	<a href='/test/insert'>Insert Data</a>
 	<hr/>
 	<table width="100%" border="1">
 		<tr>
@@ -18,8 +18,8 @@
 		</tr>
 		<% prodList.forEach(function(item, index){ %>
 		<tr>
-			<td><a href='/delete/<%= item.id %>' >DELETE</a></td>
-			<td><a href='/edit/<%= item.id %>' >EDIT</a></td>
+			<td><a href='/test/delete/<%= item.id %>' >DELETE</a></td>
+			<td><a href='/test/edit/<%= item.id %>' >EDIT</a></td>
 			<td><%= item.id %></td>
 			<td><%= item.name %></td>
 			<td><%= item.modelnumber %></td>
