--- a/angular/merge/views/login/header.html
+++ b/angular/merge/views/login/header.html
@@ -6,6 +6,8 @@
 <script type="text/javascript" src="angular/login/index/index.js"></script>
 <script type="text/javascript" src="angular/login/login.js"></script>
 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
+
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
  
